Update settings_UE5_tracking.json to include range finder

--- a/airsim_settings/settings_UE5_tracking.json
+++ b/airsim_settings/settings_UE5_tracking.json
@@ -26,7 +26,16 @@
       "VehicleType": "SimpleFlight",
       "DefaultVehicleState": "Armed",
       "AutoCreate": true,
-      "AllowAPIAlways": true
+      "AllowAPIAlways": true,
+      "Sensors": {
+          "Distance": {
+              "SensorType": 5,
+              "Enabled" : true,
+              "Yaw": 0, "Pitch": -90, "Roll": 0,
+              "MaxDistance": 200,
+              "Z": -0.2
+          }
+      }
     }
   }
 }
