--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,11 @@
 requires = ["setuptools >= 77.0.3"]
 build-backend = "setuptools.build_meta"
 [tool.setuptools]
-package-dir = {"" = "LVLMRecovery/src"}
+package-dir = {"" = "src"}
 include-package-data = true
 
 [tool.setuptools.packages.find]
-where = ["LVLMRecovery/src"]
+where = ["src"]
 
 [project]
 name = "LVLMRecovery"
